Fix video display CSS - wrap video in container

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ button:hover {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .thankyou {
